--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
 attrs==22.2.0
 blinker==1.5
+cachelib==0.9.0
 certifi==2022.12.7
 charset-normalizer==3.1.0
 click==8.1.3
 clickclick==20.10.2
 connexion==2.14.2
+Deprecated==1.2.13
 Flask==2.2.3
 Flask-Authorize==0.2.6
+Flask-Caching==2.0.2
+Flask-Limiter==3.3.0
 Flask-Login==0.6.2
 flask-marshmallow==0.14.0
 Flask-Principal==0.4.0
@@ -19,17 +23,23 @@ inflection==0.5.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
 jsonschema==4.17.3
+limits==3.3.1
+markdown-it-py==2.2.0
 MarkupSafe==2.1.2
 marshmallow==3.19.0
 marshmallow-sqlalchemy==0.29.0
+mdurl==0.1.2
+ordered-set==4.1.0
 packaging==23.0
 pkgutil-resolve-name==1.3.10
 psycopg2==2.8.4
 pydantic==1.10.7
+Pygments==2.14.0
 pyrsistent==0.19.3
 python-dotenv==1.0.0
 PyYAML==6.0
 requests==2.28.2
+rich==13.3.3
 six==1.16.0
 SQLAlchemy==2.0.7
 SQLAlchemy-Utils==0.40.0
@@ -37,4 +47,5 @@ swagger-ui-bundle==0.0.9
 typing-extensions==4.5.0
 urllib3==1.26.15
 Werkzeug==2.2.3
+wrapt==1.15.0
 zipp==3.15.0
